# smol-rs

./: Cargo.toml  README.md  build.rs
ase_files/: creature.aseprite  debu.aseprite  dot.aseprite  grass.aseprite  minicoo.aseprite  player.aseprite  toadum.aseprite  tree.aseprite  wapper.aseprite
assets/: atlas.ron
examples/: camera_movement.rs  fonts.rs  hello_world.rs  shapes.rs  texture.rs
src/: asset_store.rs  camera.rs  collision.rs  color.rs  components.rs  errors.rs  events.rs  gfx.rs  input.rs  lib.rs  logging.rs  main.rs  map.rs  math.rs  opengl.rs  pathfinding.rs  queries.rs  render.rs  render_batch.rs  renderer.rs  systems.rs  text_render.rs  texture_packer.rs  transform.rs  ui.rs  vulkan.rs  window.rs  world_setup.rs
src/gfx/: opengl.rs  vulkan.rs
src/renderer/: batch.rs  core.rs  shader.rs  shapes.rs  text.rs  texture.rs
src/shader/: 2d.fs  2d.vs  text.fs  text.vs
src/shaders/opengl/: 2d.fs  2d.vs  text.vs
src/ui/: sidebar.rs  window.rs
