[package]
name = "smol-rs"
version = "0.1.0"
authors = ["louisgjohnson <louisgjohnson@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.14.0"
image = "0.23.10"
lazy_static = "1.4.0"
hecs = "0.5.2"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["static-link","use-vcpkg"]



[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "a0518036077baa4"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }