[package]
name = "smol-rs"
version = "0.1.0"
authors = ["louisgjohnson <louisgjohnson@gmail.com>"]
edition = "2018"

[build-dependencies]
asefile = "0.2.0"
image = "0.23.14"
texture_packer = "0.23.0"
ron="*"
serde="*"
hashbrown = { version = "0.11", features = ["serde"] }

[dependencies]
gl = "0.14.0"
lazy_static = "1.4.0"
hecs = "0.5.2"
asefile = "0.2.0"
image = "0.23.14"
texture_packer = "0.23.0"
rand = "*"
ron="*"
serde="*"
glyph_brush="*"
spin_sleep = "1.0.0"
hashbrown = "0.11"
regex = "1.5"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["static-link","use-vcpkg"]



[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "a0518036077baa4"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }